# SmartCalc

./: README.md
src/: Makefile  README_RUS.md  ipn_converter.c  s21_smart_calc.h  stack.c
src/QtFrontend/Qt_Calc/: Qt_Calc.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/QtFrontend/build-Qt_Calc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_mainwindow.cpp  qrc_resources.cpp  ui_mainwindow.h
src/backend/: ipn_converter.c  ipn_converter.h  s21_smart_calc.c  s21_smart_calc.h  stack.c  stack.h
src/frontend/SmartCalc/: SmartCalc.pro  credit.cpp  credit.h  credit.ui  deposit.cpp  deposit.h  deposit.ui  graph.cpp  graph.h  graph.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_predefs.h
src/frontend/Smart_calc_v_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/frontend/build-SmartCalc-Qt_6_6_2_6_6_2_1-Debug/: Makefile  moc_credit.cpp  moc_deposit.cpp  moc_graph.cpp  moc_mainwindow.cpp  moc_qcustomplot.cpp  ui_credit.h  ui_deposit.h  ui_graph.h  ui_mainwindow.h
src/frontend/build-Smart_calc_v_1-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
src/frontend/build-Smart_calc_v_1-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-dfc57f26493b4c6af11d.json  cmakeFiles-v1-22f0a201f2f6f73b1cfa.json  cmakeFiles-v1-680a53f6764a306db991.json  codemodel-v2-0422bb4370b105615ab0.json  codemodel-v2-1b1e74d56ec182331471.json  directory-.-Debug-1540c74ed813c8691bee.json  directory-.-Debug-6241b647b9d6a6147be1.json  index-2024-02-27T15-56-59-0227.json  index-2024-03-04T17-02-56-0664.json  target-Smart_calc_v_1-Debug-00d771cc4884337913d3.json  target-Smart_calc_v_1-Debug-947da3738cc0d4f96bef.json  target-Smart_calc_v_1_autogen-Debug-4fa6766dad7e67a44838.json  (+1 more)
src/frontend/build-Smart_calc_v_1-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
src/frontend/build-Smart_calc_v_1-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Smart_calc_v_1_autogen/: deps
src/frontend/build-Smart_calc_v_1-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Smart_calc_v_1_autogen/EWIEGA46WW/: moc_mainwindow.cpp
src/frontend/build-Smart_calc_v_1-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Smart_calc_v_1_autogen/include/: ui_mainwindow.h
src/objects/backend/: ipn_converter.gcda  ipn_converter.gcno  stack.gcda  stack.gcno
src/report/: gcov_report.functions.html  gcov_report.html  gcov_report.ipn_converter.c.740c742ae8f73a8f87372f67873febff.html  gcov_report.stack.c.856942267bd47ccc3adab625a8db1157.html
src/test/: calc_tests.c  test_runner.c  test_runner.h  unit_tests
